--- a/12组件/组件5_1-作用域插槽.html
+++ b/12组件/组件5_1-作用域插槽.html
@@ -21,6 +21,14 @@
             {{ slotProps.user.firstName }}
           </template>
         </current-user1>
+
+        简写：
+        <current-user1>
+            <template v-slot="anyName">
+              {{ anyName.user.firstName }}
+            </template>
+          </current-user1>
+
       </div>
     </div>
     <script>
