--- a/6 Class 与 Style 绑定/class2_数组语法.html
+++ b/6 Class 与 Style 绑定/class2_数组语法.html
@@ -33,9 +33,9 @@
     <div id="app2">
         <ul>
             //数组语法：数组中使用对象
-            (active pre-dangerClass)
+            ()
             <div v-bind:class="[{ active: isActive }, errorClass]">test2</div>
-
+            渲染结果：(active pre-dangerClass)
         </ul>
     </div>
 
