--- a/12组件/组件4-2(编译作用域).html
+++ b/12组件/组件4-2(编译作用域).html
@@ -6,18 +6,19 @@
     <script src="../vue.js"></script>
   </head>
   <body>
-    //没有包含一个 slot 元素，则任何传入它的内容都会被抛弃。<br />
+ 
 
     <div id="app">
       <navigation-link :url="profile">
         <br />
-        父级里面无法直接访问子组件定义的数据
+        父级里面无法直接访问子组件定义的数据cont
         <!-- 该句放开报错  Logged in as {{ cont }} -->
       </navigation-link>
       <hr />
-      <navigation-link2 :url="profile">
+       <navigation-link2 :url="profile">
         插槽跟模板的其它地方一样可以访问相同的实例 property
-        (也就是相同的“作用域”)，而不能访问 navigation-link2 组件的作用域
+        (也就是相同的“作用域”)，而不能访问 子组件 navigation-link2 组件的作用域 
+        注：此例中，子组件 navigation-link2 的作用域url 父组件访问不到
         <br />
         访问不到url，但是可以访问profile<br />
         Clicking here will send you to url: {{ url }}<br />
@@ -26,7 +27,7 @@
     </div>
 
     <script>
-      // 组件1
+      // 组件1 --
       Vue.component("navigation-link", {
         props: ["url"],
         data: function () {
@@ -34,7 +35,7 @@
             cont: "子组件navigation-link",
           };
         },
-        template: '<a v-bind:href="url" >{{cont}} 超链接1</a><slot></slot>',
+        template: '<div>  <a v-bind:href="url" >{{cont}}--- 超链接1 </a> <slot></slot></div>',
       });
 
       // 组件2 --
@@ -48,7 +49,7 @@
         data: {
           id: 1,
           content: "父组件内容1",
-          profile: "tttt",
+          profile: "http://www.baidu.com",
         },
       });
       /*
