--- a/12组件/组件-作用域插槽-动态插槽名5_3_3.html
+++ b/12组件/组件-作用域插槽-动态插槽名5_3_3.html
@@ -14,8 +14,16 @@
         </template>
       </current-user>
       <hr />
+
+      当被提供的内容只有默认插槽时，组件的标签才可以被当作插槽的模板来使用（v-slot 直接用在组件上，没有用 template）
       <current-user v-slot:default="zuoyongyue">
         {{ zuoyongyue.user.firstName }}
+      </current-user>
+      <hr />
+
+      进一步简写：
+      <current-user v-slot="zuoyongyue2">
+        {{ zuoyongyue2.user.firstName }}
       </current-user>
       <hr />
 
