--- a/vue自定义指令/test.html
+++ b/vue自定义指令/test.html
@@ -20,15 +20,20 @@
     <button v-drag>点击</button>
     <div class="box" v-drag:[place]></div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
+<script src="../vue.js"></script>
 <script>
 
     Vue.directive('drag', {
-        inserted: function (el, bancing) {
-            console.log(bancing)
-            if (bancing.arg) {
-                l = bancing.arg.left;
-                t = bancing.arg.top;
+        inserted: function (el, binding,vnode,oldVnode) {
+
+
+
+            
+            console.log(binding)
+            if (binding.arg) {
+                l = binding.arg.left;
+                t = binding.arg.top;
             } else {
                 l = t = 0;
             }
