--- a/路由/动态路由2-2.html
+++ b/路由/动态路由2-2.html
@@ -15,8 +15,8 @@
         <router-link to="/user/foo">Go to Foo</router-link>
         <router-link to="/user/bar">Go to Bar</router-link>
         <router-link to="/user">Go to user</router-link>
-        <router-link to="/user#qaz">Go to user</router-link>
-        <router-link to="/user?to=foo">Go to user</router-link>
+        <router-link to="/user#qaz">Go to user#qaz</router-link>
+        <router-link to="/user?to=foo">Go to user?to=foo</router-link>
         <router-link to="/notfound">任意</router-link>
     </p>
     <!-- 路由出口 -->
